--- a/data.css
+++ b/data.css
@@ -134,6 +134,27 @@
         width: 50px;
         height: 50px;
         }
+        .repo-div{
+          display: inline;
+        }
+        nav ul{
+          position: absolute;
+          top: 90px;
+          right: 0;
+          left: 0;
+          flex-direction: column;
+          text-align: center;
+          gap: 0;
+          overflow: hidden;
+          }
+          nav ul li{
+          padding: 20px;
+      
+          }
+        nav ul li a{
+        font-size: 10px;
+     
+        }
         .btn{
         font-size: 10px;
         width: 60px;
