--- a/mobile.css
+++ b/mobile.css
@@ -5,7 +5,9 @@
       font-family: sans-serif;
       background: black;
       }
-      
+      .repo-div{
+        display: none;
+         }
       .hero{
             width: 100%;
             min-height: 25vh;
@@ -349,6 +351,27 @@ margin-top: 50px;
     .logo{
       width: 50px;
       height: 50px;
+      }
+      .repo-div{
+        display: inline;
+      }
+      nav ul{
+        position: absolute;
+        top: 90px;
+        right: 0;
+        left: 0;
+        flex-direction: column;
+        text-align: center;
+        gap: 0;
+        overflow: hidden;
+        }
+        nav ul li{
+        padding: 20px;
+    
+        }
+      nav ul li a{
+      font-size: 10px;
+   
       }
       .btn{
       font-size: 10px;
