--- a/service.css
+++ b/service.css
@@ -6,6 +6,9 @@
        font-family: SF-Pro-Display;
       
       }
+      .repo-div{
+     display: none;
+      }
       .hero{
             width: 100%;
             min-height: 93vh;
@@ -15,7 +18,13 @@
             overflow: hidden;
             position: relative;
         }
+         
         
+          /* #navLinklist {
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.5s ease-out;
+        } */
         nav{
             padding: 10px 0;
             display: flex;
@@ -308,14 +317,32 @@
       width: 50px;
       height: 50px;
       }
+      
       .btn{
       font-size: 10px;
       width: 60px;
       height: 60px;
       }
+      .repo-div{
+        display: inline;
+      }
+      nav ul{
+        position: absolute;
+        top: 90px;
+        right: 0;
+        left: 0;
+        flex-direction: column;
+        text-align: center;
+        gap: 0;
+        overflow: hidden;
+        }
+        nav ul li{
+        padding: 20px;
+    
+        }
       nav ul li a{
       font-size: 10px;
-      display: flex;
+   
       }
       .wrap h1{
       font-size: 40px;
