--- a/style.css
+++ b/style.css
@@ -9,12 +9,163 @@
        font-family: SF-Pro-Display;
       
       }
+      nav{
+        padding: 10px 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    nav ul li{
+        display: inline-block;
+        list-style: none;
+        margin: 10px 15px;
+        font-weight: 400;
+    }
+    nav ul li a{
+        text-decoration: none;
+        color: white;
+        font-weight: 400;
+        font-size: 1.3rem;
+       
+    }
+  /* hhhh */
+ nav ul li a:hover{
+  background-image: linear-gradient(to right, #20D4FE 0%, #B722FF 100%);
+ }
+
+ .hover-line:hover:after{
+  width: 100%;
+  transition: 3;
+ }
+  /* button */
+    .btn{
+        text-decoration: none;
+        display: inline-block;
+        color: #fff;
+        font-weight: 400;
+         background:linear-gradient(to right, #20D4FE 0%, #B722FF 100%);
+        height: 50px;
+        width: 180px;
+        font-size: 15px;
+        border-radius: 12px;
+        
+       }
+       .btn a{
+        text-decoration: none;
+        color: white;
+        background: linear-gradient(to right, #20D4FE 0%, #B722FF 100%);
+       
+       }
       #kg{
         color: #fff;
       }
-      #icon{
-      display: none;
+      .repo-div{
+        display: none;
       }
+      @media (max-width: 786px){
+        .repo-div{
+            display: inline;
+            margin-right: 50%;
+          }
+          nav ul{
+            position: absolute;
+            top: 90px;
+            right: 50%;
+            left: 0;
+            flex-direction: column;
+            text-align: center;
+            gap: 0;
+            overflow: hidden;
+            }
+            nav ul li{
+            padding: 20px;
+        
+            }
+          nav ul li a{
+          font-size: 10px;
+       
+          }
+          .repo-div{
+            display: inline;
+          }
+          nav ul li a{
+            font-size: 10px;
+         
+            }
+            .btn{
+            font-size: 10px;
+            width: 60px;
+            height: 60px;
+            }
+            nav ul li a{
+            font-size: 10px;
+            display: flex;
+            }
+      }
+    
+         .hero{
+               width: 100%;
+               min-height: 93vh;
+               background-position: center;
+               background-size: cover;
+               padding: 10px 10%;
+               overflow: hidden;
+               position: relative;
+           }
+           
+           
+             /* #navLinklist {
+               max-height: 0;
+               overflow: hidden;
+               transition: max-height 0.5s ease-out;
+           } */
+           nav{
+               padding: 10px 0;
+               display: flex;
+               align-items: center;
+               justify-content: space-between;
+           }
+           nav ul li{
+               display: inline-block;
+               list-style: none;
+               margin: 10px 15px;
+               font-weight: 400;
+           }
+           nav ul li a{
+               text-decoration: none;
+               color: white;
+               font-weight: 400;
+               font-size: 1.3rem;
+              
+           }
+         /* hhhh */
+        nav ul li a:hover{
+         background-image: linear-gradient(to right, #20D4FE 0%, #B722FF 100%);
+        }
+       
+        .hover-line:hover:after{
+         width: 100%;
+         transition: 3;
+        }
+         /* button */
+           .btn{
+               text-decoration: none;
+               display: inline-block;
+               color: #fff;
+               font-weight: 400;
+                background:linear-gradient(to right, #20D4FE 0%, #B722FF 100%);
+               height: 50px;
+               width: 180px;
+               font-size: 15px;
+               border-radius: 12px;
+               
+              }
+              .btn a{
+               text-decoration: none;
+               color: white;
+               background: linear-gradient(to right, #20D4FE 0%, #B722FF 100%);
+              
+              }
 
     header
 {   top: 0;
@@ -34,24 +185,6 @@
     justify-content: space-between;
     padding: 5px 72px 0 72px;
 
-}
-#navlist
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    list-style: none;
-    column-gap: 60px;
-}
-
-#imgLogo
-{
-    height: 50px;
-    width: 100%;
-}
-#imgLogo:hover
-{
-    cursor: pointer;
 }
 
 #navBarButton button
